--- a/flarum-image/flarum-rootfs/etc/nginx/nginx.conf
+++ b/flarum-image/flarum-rootfs/etc/nginx/nginx.conf
@@ -29,11 +29,30 @@ http {
   uwsgi_temp_path /tmp/uwsgi 1 2;
   scgi_temp_path /tmp/scgi 1 2;
 
+  #server {
+  #    listen 8880;
+  #    server_name champo.ptyx.de
+  #
+  #    location / {
+  #      return 301 https://$host$request_uri;
+  #    }  
+  #
+  #    location /.well-known/acme-challenge/ {
+  #      root /var/www/certbot;
+  #    }
+  #} (written when I was considering generating certificates with docker image)
+
+  #server {
+  #  listen 80;
+  #  }
+
   server {
+    #listen 8888;
     listen 8888 ssl;
     ssl_certificate /etc/nginx/certificates/cert.pem;
     ssl_certificate_key /etc/nginx/certificates/privkey.pem;
-    
+    ##ssl_certificate /etc/letsencrypt/live/champo.ptyx.de/fullchain.pem;
+    ##ssl_certificate_key /etc/letsencrypt/live/champo.ptyx.de/privkey.pem;
     charset utf-8;
 
 
@@ -52,7 +71,7 @@ http {
       include fastcgi_params;
       fastcgi_split_path_info ^(.+\.php)(/.*)$;
       fastcgi_index index.php;
-      fastcgi_pass unix:/tmp/php-fpm.sock;
+      fastcgi_pass unix:/run/php/php8-fpm.sock;
       fastcgi_intercept_errors on;
       fastcgi_request_buffering off;
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -61,6 +80,6 @@ http {
       fastcgi_param REMOTE_ADDR $http_x_real_ip;
     }
 
-    include /etc/nginx/flarum/custom-vhost-flarum.conf;
+    #include /etc/nginx/flarum/custom-vhost-flarum.conf;
   }
 }
