--- a/flarum-image/flarum-rootfs/etc/nginx/nginx.conf
+++ b/flarum-image/flarum-rootfs/etc/nginx/nginx.conf
@@ -49,8 +49,10 @@ http {
   server {
     #listen 8888;
     listen 8888 ssl;
-    ssl_certificate /etc/nginx/certificates/cert.pem;
-    ssl_certificate_key /etc/nginx/certificates/privkey.pem;
+    #ssl_certificate /etc/nginx/certificates/cert.pem;
+    #ssl_certificate_key /etc/nginx/certificates/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/champo.ptyx.de/cert.pem;
+    ssl_certificate_key /etc/letsencrypt/live/champo.ptyx.de/privkey.pem;
     ##ssl_certificate /etc/letsencrypt/live/champo.ptyx.de/fullchain.pem;
     ##ssl_certificate_key /etc/letsencrypt/live/champo.ptyx.de/privkey.pem;
     charset utf-8;
