--- a/flarum-image/flarum-rootfs/etc/nginx/nginx.conf
+++ b/flarum-image/flarum-rootfs/etc/nginx/nginx.conf
@@ -46,9 +46,26 @@ http {
   #  listen 80;
   #  }
 
+
+  server {
+    listen 8888 ssl;
+    server_name ub2.ptyx.de;
+    charset utf-8;
+    ssl_certificate /etc/letsencrypt/live/champo.ptyx.de/cert.pem;
+    ssl_certificate_key /etc/letsencrypt/live/champo.ptyx.de/privkey.pem;
+
+    root /flarum/app/public/ub2; 
+    location / {
+        # First attempt to serve request as file, then
+        # as directory, then fall back to displaying a 404.
+        try_files $uri $uri/ =404;
+    }
+  }
+
   server {
     #listen 8888;
     listen 8888 ssl;
+    server_name champo.ptyx.de;
     #ssl_certificate /etc/nginx/certificates/cert.pem;
     #ssl_certificate_key /etc/nginx/certificates/privkey.pem;
     ssl_certificate /etc/letsencrypt/live/champo.ptyx.de/cert.pem;
@@ -84,4 +101,5 @@ http {
 
     #include /etc/nginx/flarum/custom-vhost-flarum.conf;
   }
+
 }
